--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,28 +1,39 @@
 <div>
-  <form id="formEmail" onsubmit="yourFunction('formEmail', 'useremail', 'email')"> Get User By Email:
+  <!-- Search for user by email -->
+  <form id="formEmail" onsubmit="translateFormAction('formEmail', 'useremail', 'email')"> Get User By Email:
     <br>
     <input type="text" name="email">
     <br>
-    <input type="submit" value="Submit"> </form>
+    <input type="submit" value="Submit"></form>
 
-  <form id="formUserId" onsubmit="yourFunction('formUserId', 'userid', 'id')"> Get User By Id:
+  <!-- Search for user by id -->
+  <form id="formUserId" onsubmit="translateFormAction('formUserId', 'userid', 'id')"> Get User By Id:
     <br>
     <input type="text" name="id">
     <br>
-    <input type="submit" value="Submit"> </form>
+    <input type="submit" value="Submit"></form>
 
-  <form id="formInstructorClassId" onsubmit="yourFunction('formInstructorClassId', 'instructorclassid', 'id')"> Get Instructor By Class ID:
+  <!-- Search for instructor by class id -->
+  <form id="formInstructorClassId" onsubmit="translateFormAction('formInstructorClassId', 'instructorclassid', 'id')">
+    Get Instructor By Class ID:
     <br>
     <input type="text" name="id">
     <br>
-    <input type="submit" value="Submit"> </form>
+    <input type="submit" value="Submit"></form>
 </div>
 
 <script>
-  function yourFunction(elementId, path, actionName){
-    var action_src = "http://facilities344.herokuapp.com/" + path + "?" + document.getElementsByName(actionName)[0].value;
-    var your_form = document.getElementById(elementId);
-    your_form.action = action_src ;
+  /**
+   * Translate information from the form into a proper action that will trigger the API hook.
+   *
+   * @param formId The 'id' of the form that is calling this function
+   * @param path The path that will be used by 'routes.js'
+   * @param inputName The 'name' of the input field in the form
+   */
+  function translateFormAction(formId, path, inputName) {
+    var action_src = "http://facilities344.herokuapp.com/" + path + "?" + document.getElementsByName(inputName)[0].value;
+    var form = document.getElementById(formId);
+    form.action = action_src;
   }
 </script>
 
