--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -27,17 +27,15 @@
      * @param inputName The 'name' of the input field in the form
      * @param param url parameter
      */
-    //userid?id=2;
     function translateFormAction(formId, path, inputName) {
         var inputVal = document.getElementsByName(inputName)[0].value;
         var form = document.getElementById(formId);
         var action_src = "";
-        if (inputVal == "" || inputVal == " ") {
-            form.action = "http://facilities344.herokuapp.com/";
+        if (inputVal != "" || inputVal != " ") {
+            action_src = "http://facilities344.herokuapp.com/" + path + "?" + inputName + "=" + inputVal;
         }
         else {
-            //        var action_src = "http://facilities344.herokuapp.com/" + path + "?" + inputVal;
-            action_src = "http://facilities344.herokuapp.com/" + path + "?" + inputName + "=" + inputVal;
+            action_src = "http://facilities344.herokuapp.com/";
         }
         form.action = action_src;
     }
