--- a/assets/styles/styleguide.less
+++ b/assets/styles/styleguide.less
@@ -1,3 +1,13 @@
-body {
-    font-family: Helvetica, Arial, sans-serif;
-}
+
+// Colors
+@raw-sienna: #D58453;
+@americano: #8E7D76;
+@sorrell-brown: #CCBA89;
+@chestnut: #BA554A;
+@kabul: #654A42;
+
+// Fonts
+@header-font: "Helvetica";
+@body-font: "Arial";
+
+// Links
