--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -24,6 +24,7 @@
 // @import 'mixins/baz.less';
 //
 @import 'styleguide.less';
+@import 'custom.less';
 // @import 'pages/login.less';
 // @import 'pages/signup.less';
 //
