--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,1 +1,26 @@
-<h1>Account: displays user info and what items they have reserved</h1>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="reservations">Reservations</a></li>
+                <li><a href="devices">Devices</a></li>
+                <li class="active"><a href="">Account</a></li>
+                <li><a href="">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="page-header">
+        <h1>Account <small>Account details</small></h1> </div>
+        <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <p>This side will have account info</p>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <p>This side will have currently reserved devices/rooms/link to class schedule or something</p>
+        </div>
+    </div>
+</div>
