--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -1,1 +1,23 @@
-<h1>Shows all devices</h1>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="reservations">Reservations</a></li>
+                <li class="active"><a href="">Devices</a></li>
+                <li><a href="account">Account</a></li>
+                <li><a href="">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="page-header">
+        <h1>Devices <small>All devices available</small></h1> </div>
+        <div class="row">
+        <div class="col-sm-12">
+            <p>This will show a full list of devices</p>
+        </div>
+    </div>
+</div>
