--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,20 @@
-<h1>Dashboard, post log in</h1>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="reservations">Reservations</a></li>
+                <li><a href="devices">Devices</a></li>
+                <li><a href="account">Account</a></li>
+                <li><a href="">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="jumbotron">
+        <h1>Welcome</h1>
+        <p>This will be the dashboard, what the user sees after login</p>
+    </div>
+</div>
