--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,25 @@
-<h1>Index: What the user sees before they log in</h1>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="">Facilities</a> </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="">Log In</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="jumbotron">
+        <h1>Welcome</h1>
+        <p>This will be the index page, with login somewhere here</p>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <p>This side will have maybe weather info</p>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <p>This side will have something else</p>
+        </div>
+    </div>
+</div>
