--- a/views/reservations.ejs
+++ b/views/reservations.ejs
@@ -1,1 +1,52 @@
-<h1>Page to make reservations</h1>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="">Reservations</a></li>
+                <li><a href="devices">Devices</a></li>
+                <li><a href="account">Account</a></li>
+                <li><a href="">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="page-header">
+        <h1>Reservations <small>Find items to reserve</small></h1> </div>
+    <div class="row">
+        <div class="col-xs-6 col-sm-6 col-md-3">
+            <div class="thumbnail"> <img src="img/placeholder.svg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+                    <p>...</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Reserve</a> </div>
+            </div>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-3">
+            <div class="thumbnail"> <img src="img/placeholder.svg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+                    <p>...</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Reserve</a> </div>
+            </div>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-3">
+            <div class="thumbnail"> <img src="img/placeholder.svg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+                    <p>...</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Reserve</a> </div>
+            </div>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-3">
+            <div class="thumbnail"> <img src="img/placeholder.svg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+                    <p>...</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Reserve</a> </div>
+            </div>
+        </div>
+    </div>
+</div>
