--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -15,9 +15,36 @@
 <div class="container">
     <div class="page-header">
         <h1>Devices <small>All devices available</small></h1> </div>
-        <div class="row">
+        <div class="row"/>
         <div class="col-sm-12">
             <p>This will show a full list of devices</p>
         </div>
+        <div class="container">
+          <table class="table table-striped">
+            <thead>
+              <th>Name</th>
+              <th>Model</th>
+              <th>Condition</th>
+              <th>Reserved</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>ChromeBook1</td>
+                <td>Chrome Book</td>
+                <td>New</td>
+                <td>False</td>
+              </tr>
+            </tbody>
+          </table>
     </div>
 </div>
+
+
+<script>
+  function device( name, model, condition, reserved ) {
+    this.name = name;
+    this.model = model;
+    this.condition = condition;
+    this.reserved = reserved;
+  }
+</script>
