--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,9 @@
     </title>
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="google-signin-client_id" content="437977184848-1srksc4289acnf9lnnahj84dkm6e996k.apps.googleusercontent.com">
+    
+    
     <!--
         Stylesheets and Preprocessors
         ==============================
@@ -85,6 +88,7 @@
         <!--SCRIPTS-->
         <script src="/js/dependencies/sails.io.js"></script>
         <script src="/js/jquery.min.js"></script>
+        <script src="/js/oauth.js"></script>
         <script src="/bootstrap/bootstrap.min.js"></script>
         <!--SCRIPTS END-->
 </body>
