--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,4 +17,26 @@
         <h1>Welcome</h1>
         <p>This will be the dashboard, what the user sees after login</p>
     </div>
+    <div class="row">
+    
+        <div class="col-md-6">
+        
+        
+        </div>
+        
+        <div class="col-md-6">
+        
+            <div id="gConnect">
+                <h3>Oh no, you're not logged in!</h3>
+                <div id="signin-button"></div>
+            </div>
+            <div id="authOps" style="display:none">
+                <h3>Sign-in success</h3>
+                <button id="signOut" onclick="auth2.signOut()">Sign Out</button>
+                <div id="profile"> </div>
+            </div>
+        
+        </div>
+    
+    </div>
 </div>
