--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,15 @@
         </div>
         <div class="col-sm-12 col-md-6">
             <p>This side will have something else</p>
+            <div id="gConnect">
+                <h3>Oh no, you're not logged in!</h3>
+                <div id="signin-button"></div>
+            </div>
+            <div id="authOps" style="display:none">
+                <h3>Sign-in success</h3>
+                <button id="signOut" onclick="auth2.signOut()">Sign Out</button>
+                <div id="profile"> </div>
+            </div>
         </div>
     </div>
 </div>
