Added classrooms adn classrooms-admin pages and basic functionality of creating a new classroom.

--- a/views/devices-admin.ejs
+++ b/views/devices-admin.ejs
@@ -5,7 +5,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="reservations">Reservations</a></li>
-        <li class="active"><a href="">Devices</a></li>
+        <li><a href="">Devices</a></li>
         <li><a href="account">Account</a></li>
         <li><a href="">Logout</a></li>
       </ul>
