--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -6,6 +6,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="reservations">Reservations</a></li>
                 <li class="active"><a href="">Devices</a></li>
+                <li><a href="classrooms">Classrooms</a></li>
                 <li><a href="account">Account</a></li>
                 <li><a href="">Logout</a></li>
             </ul>
