--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="reservations">Reservations</a></li>
                 <li><a href="devices">Devices</a></li>
+                <li><a href="classrooms">Classrooms</a></li>
                 <li><a href="account">Account</a></li>
                 <li><a href="">Logout</a></li>
             </ul>
@@ -18,14 +19,14 @@
         <p>This will be the dashboard, what the user sees after login</p>
     </div>
     <div class="row">
-    
+
         <div class="col-md-6">
-        
-        
+
+
         </div>
-        
+
         <div class="col-md-6">
-        
+
             <div id="gConnect">
                 <h3>Oh no, you're not logged in!</h3>
                 <div id="signin-button"></div>
@@ -35,8 +36,8 @@
                 <button id="signOut" onclick="auth2.signOut()">Sign Out</button>
                 <div id="profile"> </div>
             </div>
-        
+
         </div>
-    
+
     </div>
 </div>
