--- a/views/reservations.ejs
+++ b/views/reservations.ejs
@@ -6,6 +6,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="">Reservations</a></li>
                 <li><a href="devices">Devices</a></li>
+                <li><a href="classrooms">Classrooms</a></li>
                 <li><a href="account">Account</a></li>
                 <li><a href="">Logout</a></li>
             </ul>
@@ -50,13 +51,3 @@
         </div>
     </div>
 </div>
-
-
-<script>
-  function classroom( building, room, capacity, reserved ){
-    this.building = building;
-    this.room = room;
-    this.capacity = capacity;
-    this.reserved = reserved;
-  }
-</script>
