Added more admin pages. Admin pages now only go to other admin pages through the navbar.

--- a/views/classrooms.ejs
+++ b/views/classrooms.ejs
@@ -5,8 +5,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="reservations">Reservations</a></li>
-        <li><a href="">Devices</a></li>
-        <li class="active"><a href="classrooms">Classrooms</a></li>
+        <li><a href="devices">Devices</a></li>
+        <li class="active"><a href="">Classrooms</a></li>
         <li><a href="account">Account</a></li>
         <li><a href="">Logout</a></li>
       </ul>
