--- a/views/account.ejs
+++ b/views/account.ejs
@@ -10,6 +10,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="reservations">Reservations</a></li>
                 <li><a href="devices">Devices</a></li>
+                <li><a href="classrooms">Classrooms</a></li>
                 <li class="active"><a href="">Account</a></li>
                 <li><a href="">Logout</a></li>
             </ul>
