--- a/views/devices-admin.ejs
+++ b/views/devices-admin.ejs
@@ -4,9 +4,10 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="dashboard">Facilities</a> </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="reservations">Reservations</a></li>
-        <li><a href="">Devices</a></li>
-        <li><a href="account">Account</a></li>
+        <li><a href="reservations-admin">Reservations</a></li>
+        <li class="active"><a href="">Devices</a></li>
+        <li><a href="classrooms-admin">Classrooms</a></li>
+        <li><a href="account-admin">Account</a></li>
         <li><a href="">Logout</a></li>
       </ul>
     </div>
