--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,8 +10,6 @@
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="google-signin-client_id" content="437977184848-1srksc4289acnf9lnnahj84dkm6e996k.apps.googleusercontent.com">
-    
-    
     <!--
         Stylesheets and Preprocessors
         ==============================
@@ -91,6 +89,7 @@
         <script src="/js/oauth.js"></script>
         <script src="/bootstrap/bootstrap.min.js"></script>
         <!--SCRIPTS END-->
+        <script src="https://apis.google.com/js/client:platform.js?onload=startApp"></script>
 </body>
 
 </html>
