--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -25,6 +25,7 @@
 //
 @import 'styleguide.less';
 @import 'custom.less';
+@import 'basics.less';
 // @import 'pages/login.less';
 // @import 'pages/signup.less';
 //
