--- a/views/account.ejs
+++ b/views/account.ejs
@@ -44,7 +44,7 @@
                         <td>New</td>
                         <!-- Return Device Button -->
                         <td>
-                            <button type="button" class="open-returndevice btn btn-info btn-sm" data-toggle="modal" data-target="#returnDevice" data-device-name="Laptop">Return</button>
+                            <button type="button" class="open-returndevice btn btn-sm" data-toggle="modal" data-target="#returnDevice" data-device-name="Laptop">Return</button>
                         </td>
                     </tr>
                     <tr>
@@ -53,7 +53,7 @@
                         <td>1/1/16</td>
                         <td>Screen Scratched</td>
                         <td>
-                            <button type="button" class="open-returndevice btn btn-info btn-sm" data-toggle="modal" data-target="#returnDevice" data-device-name="Kindle">Return</button>
+                            <button type="button" class="open-returndevice btn btn-sm" data-toggle="modal" data-target="#returnDevice" data-device-name="Kindle">Return</button>
                         </td>
                     </tr>
                 </tbody>
