--- a/assets/styles/styleguide.less
+++ b/assets/styles/styleguide.less
@@ -1,13 +1,14 @@
-
-// Colors
-@raw-sienna: #D58453;
-@americano: #8E7D76;
-@sorrell-brown: #CCBA89;
-@chestnut: #BA554A;
-@kabul: #654A42;
+@import url('https://fonts.googleapis.com/css?family=Archivo+Narrow:700|Source+Sans+Pro:400,700');
 
 // Fonts
-@header-font: "Helvetica";
-@body-font: "Arial";
+@header-font: 'Archivo Narrow', sans-serif;
+@body-font: 'Source Sans Pro', sans-serif;
 
-// Links
+
+// Colors
+@sky: #CAEBF2; //secondary pop color
+@carbon: #A9A9A9; //body color
+@watermelon: #FF3B3F; //highlight color
+@neutral: #545454; //link color
+@lightgray: #FBFDFD; //body background
+
