--- a/views/reservations.ejs
+++ b/views/reservations.ejs
@@ -18,19 +18,19 @@
         <h1>Reservations <small>Find items to reserve</small></h1> </div>
     <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-3">
-            <div class="thumbnail"> <img src="img/laptop_placeholder.png" alt="...">
+            <div class="thumbnail"> <img src="img/laptop.png" alt="...">
                 <div class="caption">
                     <h3>Device to Reserve</h3>
                     <p>...</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Reserve</a> </div>
+                    <p><a href="#" class="btn" role="button">Reserve</a> </div>
             </div>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-3">
-            <div class="thumbnail"> <img src="img/classroom_placeholder.png" alt="...">
+            <div class="thumbnail"> <img src="img/classroom.png" alt="...">
                 <div class="caption">
                     <h3>Classroom to Reserve</h3>
                     <p>...</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Reserve</a> </div>
+                    <p><a href="#" class="btn" role="button">Reserve</a> </div>
             </div>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-3">
@@ -38,7 +38,7 @@
                 <div class="caption">
                     <h3>Thumbnail label</h3>
                     <p>...</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Reserve</a> </div>
+                    <p><a href="#" class="btn" role="button">Reserve</a> </div>
             </div>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-3">
@@ -46,7 +46,7 @@
                 <div class="caption">
                     <h3>Thumbnail label</h3>
                     <p>...</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Reserve</a> </div>
+                    <p><a href="#" class="btn" role="button">Reserve</a> </div>
             </div>
         </div>
     </div>
