Fixed dashboard route, oauth progres

--- a/.tmp/public/styles/importer.css
+++ b/.tmp/public/styles/importer.css
@@ -17,6 +17,9 @@
 .navbar {
   background: #A9A9A9;
 }
+.navbar-collapse .collapse {
+  display: block;
+}
 .navbar-default {
   border: none;
   border-radius: 0;
