--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,13 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="">Facilities</a> </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div id="navbar" class="collapse navbar-collapse" style="display:none !important;">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="">Log In</a></li>
+                <li><a href="reservations">Reservations</a></li>
+                <li><a href="devices">Devices</a></li>
+                <li><a href="classrooms">Classrooms</a></li>
+                <li><a href="account">Account</a></li>
+                <li><a href="" id="signOut" onclick="auth2.signOut()">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -19,16 +23,12 @@
             <p>This side will have maybe weather info</p>
         </div>
         <div class="col-sm-12 col-md-6">
-            <p>This side will have something else</p>
+            <h2>Sign in with your Google account:</h2>
             <div id="gConnect">
-                <h3>Oh no, you're not logged in!</h3>
                 <div id="signin-button"></div>
             </div>
             <div id="authOps" style="display:none">
-                <h3>Sign-in success</h3>
-                <button id="signOut" onclick="auth2.signOut()">Sign Out</button>
-                <div id="profile"> </div>
-            </div>
+                <h4>Sign-in success</h4> </div>
         </div>
     </div>
 </div>
