--- a/views/reservations.ejs
+++ b/views/reservations.ejs
@@ -8,7 +8,7 @@
                 <li><a href="devices">Devices</a></li>
                 <li><a href="classrooms">Classrooms</a></li>
                 <li><a href="account">Account</a></li>
-                <li><a href="">Logout</a></li>
+                <li><a href="" id="signOut" onclick="auth2.signOut()">Logout</a></li>
             </ul>
         </div>
     </div>
