--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,7 @@
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="google-signin-client_id" content="437977184848-1srksc4289acnf9lnnahj84dkm6e996k.apps.googleusercontent.com">
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:700|Source+Sans+Pro:400,700" rel="stylesheet">
     <!--
         Stylesheets and Preprocessors
         ==============================
