Reads in data from World Weather Online API

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,6 +20,14 @@
     </div>
     <div class="row">
         <div class="col-md-6">
+            <h2>System</h2>
+            <ul>
+                <li><a href="">BookStore</a></li>
+                <li><a href="">University Human Resources</a></li>
+                <li><a href="">Student Enrollment System</a></li>
+                <li><a href="">Co-op Evaluation</a></li>
+                <li><a href="">Student Grading System</a></li>
+            </ul>
             <% if (userObjects){
                 if (userObjects[0].hasOwnProperty("StudentID")){for(var i=0; i < userObjects.length; i++) { %>
                 <p>StudentID:
