--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,16 @@
         <p>This will be the index page, with login somewhere here</p>
     </div>
     <div class="row">
-        <div class="col-sm-12 col-md-6">
-            <p>This side will have maybe weather info</p>
+        <div class="col-sm-12 col-md-6"> <a class="twitter-timeline" href="https://twitter.com/Facilities344">Tweets by Facilities344</a>
+            <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <br/>
+            <br/>
+            <div id="weatherContent"> </div>
+            <div id="decisionContent"> </div>
+            <div id="displayOptions"> </div>
+            <div id="weatherContentLeft"> </div>
+            <div id="decisionContentSub"> </div>
+            <div id="decisionContentHead"> </div>
         </div>
         <div class="col-sm-12 col-md-6">
             <h2>Sign in with your Google account:</h2>
