Functionality to get weather is there, but not displayed on the views

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="google-signin-client_id" content="437977184848-1srksc4289acnf9lnnahj84dkm6e996k.apps.googleusercontent.com">
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:700|Source+Sans+Pro:400,700" rel="stylesheet">
+    
     <!--
         Stylesheets and Preprocessors
         ==============================
@@ -37,7 +38,8 @@
     <!--STYLES END-->
 </head>
 
-<body onload="weather.getWeather();">
+<!--<body onload="weather.getWeather();">-->
+<body>
     <%- body %>
         <!--
         Client-side Templates
