--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="google-signin-client_id" content="437977184848-1srksc4289acnf9lnnahj84dkm6e996k.apps.googleusercontent.com">
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:700|Source+Sans+Pro:400,700" rel="stylesheet">
-    
     <!--
         Stylesheets and Preprocessors
         ==============================
@@ -37,8 +36,8 @@
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
 </head>
-
 <!--<body onload="weather.getWeather();">-->
+
 <body>
     <%- body %>
         <!--
@@ -94,6 +93,21 @@
         <script src="/bootstrap/bootstrap.min.js"></script>
         <!--SCRIPTS END-->
         <script src="https://apis.google.com/js/client:platform.js?onload=startApp"></script>
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o)
+                    , m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+            ga('create', 'UA-88490921-1', 'auto');
+            ga('send', 'pageview');
+        </script>
 </body>
 
 </html>
