Twitter weather cron job

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,9 @@
     <div class="jumbotron">
         <h1>Welcome</h1>
         <p>This will be the index page, with login somewhere here</p>
+        <a href="/timeline">Timeline</a><br/>
+        <a href="/tweet">Tweet</a><br/>
+        <a href="/cron">Run Cron</a>
     </div>
     <div class="row">
         <div class="col-sm-12 col-md-6"> <a class="twitter-timeline" href="https://twitter.com/Facilities344">Tweets by Facilities344</a>
